Fixed height problem with height=100vh not working on tablet

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -21,7 +21,6 @@ html {
   min-width: 300px;
   font-weight: normal;
   z-index: -5;
-  height: 100%;
   background-repeat: no-repeat;
   background-color: #000000;
   width: auto;
@@ -74,9 +73,6 @@ body {
     font-style: normal;
 }
 */
-.sqTier {
-  height: 100vh;
-}
 .sqTileContainer {
   display: none;
   position: relative;
